        Reviewed by Darin.

https://bugs.webkit.org/show_bug.cgi?id=3248
        Bug 3248: Mouse events on OPTION element seem to be ignored

        Support mouse events on options in a select when it forms a list box.

        Test: fast/forms/option-mouseevents.html

Canonical link: https://commits.webkit.org/32891@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40763 268f45cc-cd09-0410-ab3c-d52691b4dbfc